# Hello-World-Freestanding

./: .gitattributes  CMakeLists.txt  CTestTestfile.cmake  README.md
src/: main.c
src/slib/: CMakeLists.txt  print.c  print.h  slib.h  start.s  strlen.c  strlen.h
